tests/compiler/diagnostics-engine/tests/test1/expected.txt
error: Invalid class member declaration: found 'var'.
 --> source.jack:1:5
   |
 2 |     var x, y;
   |     ^~~
error: Missing variable name
 --> source.jack:4:15
   |
 5 |         var xy;
   |               ^
